improved flag finder

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ obj/Debug/AutoEnum.pdb
 obj/x64/Release/AutoEnum.pdb
 obj/x64/Release/DesignTimeResolveAssemblyReferencesInput.cache
 *.vsidx
+*.json
